--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "kampsync-ical-service",
+  "name": "ical-generator",
   "version": "1.0.0",
+  "description": "",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "axios": "^1.6.0",
-    "express": "^4.18.2",
-    "ical-generator": "^3.6.0"
+    "axios": "^1.6.7",
+    "ical-generator": "^6.0.0",
+    "express": "^4.18.2"
   }
 }
