--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "ical-generator",
+  "name": "ical-service",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "axios": "^1.4.0",
-    "ical-generator": "^6.0.0",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "ical-generator": "^3.6.1",
+    "axios": "^1.6.7"
   }
 }
