--- a/api/calendar/vercel/package.json
+++ b/api/calendar/vercel/package.json
@@ -1,8 +1,14 @@
 {
-  "name": "kampsync-vercel",
+  "name": "ical-vercel",
   "version": "1.0.0",
+  "main": "server.js",
+  "type": "commonjs",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
+    "express": "^4.19.2",
     "axios": "^1.6.7",
-    "ical-generator": "^6.0.0"
+    "ical-generator": "^3.6.0"
   }
 }
