--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.19.2",
+    "express": "^4.18.2",
     "ical-generator": "^3.6.1",
-    "axios": "^1.6.7"
+    "axios": "^1.6.7",
+    "date-fns": "^3.6.0"
   }
 }
