--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.18.2",
     "ical-generator": "^3.6.1",
     "axios": "^1.6.7",
-    "date-fns": "^3.6.0"
+    "date-fns": "^3.6.0",
+    "uuid": "^9.0.0"
   }
 }
